force-app/main/default/objects/VIIntervenant_affaire__c/VIIntervenant_affaire__c.object-meta.xml
<CustomObject>
    <label>Intervenant sur affaire</label>
    <nameField>
        <displayFormat>AF{000000}</displayFormat>
        <label>Ref Affaire Equipe</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intervenants sur affaire</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>