force-app/main/default/objects/VIIntervenant_affaire__c/fields/Affaire__c.field-meta.xml
<CustomField>
    <fullName>Affaire__c</fullName>
    <label>Affaire</label>
    <referenceTo>VIAffaire__c</referenceTo>
    <relationshipLabel>Intervenants sur affaire</relationshipLabel>
    <relationshipName>Intervenants_sur_affaire</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>