force-app/main/default/objects/VIIntervenant_affaire__c/fields/Intervenant__c.field-meta.xml
<CustomField>
    <fullName>Intervenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intervenant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intervenants_sur_affaire</relationshipName>
    <type>Lookup</type>
</CustomField>