force-app/main/default/objects/VIIntervenant_affaire__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Rôle</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Intervenant_sur_affaire_role</valueSetName>
    </valueSet>
</CustomField>